# epicstar

./: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATED_SETUP_STATUS.md  BUILD_COMPLETE_SUMMARY.md  CHANGELOG.md  Containerfile  DEPLOYMENT_STATUS.md  DEVELOPMENT_PLAN_SUMMARY.md  GETTING_STARTED.md  LICENSE  M1_COMPLETION_REPORT.md  README.md  REFACTORING_SUMMARY.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  alembic.ini  check_github_app.md  podman-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  update_env.sh
alembic/: env.py
alembic/versions/: 20251004_0154_dca192f8577d_initial_database_schema.py
app/: __init__.py  config.py  main.py
app/api/: health.py  metrics.py  webhooks.py
app/core/: logging.py  retry.py  security.py
app/db/: __init__.py  crud.py  database.py  models.py
app/integrations/: github_client.py  onedev_client.py
app/models/: webhook.py
app/services/: git_operations.py  sync_orchestrator.py
app/utils/: exceptions.py
docs/: project-plan.md
docs/api/: webhook-api.md
docs/architecture/: database-schema.md  overview.md
docs/deployment/: podman-deployment.md
docs/setup/: deployment.md  github-app-setup.md
docs/testing/: test-plan.md
docs/use-cases/: basic-sync.md
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_security.py
